{
  "version": 4,
  "terraform_version": "1.2.9",
  "serial": 638,
  "lineage": "c5597211-b3f6-ae74-2525-60e01c28000a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ziyo_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323741042377:internet-gateway/igw-0e5285f779ed75328",
            "id": "igw-0e5285f779ed75328",
            "owner_id": "323741042377",
            "tags": {
              "company": "ziyotek_2023_spring"
            },
            "tags_all": {
              "company": "ziyotek_2023_spring"
            },
            "vpc_id": "vpc-002bd492c74796622"
          },
          "dependencies": [
            "aws_vpc.ziyo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ziyo_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323741042377:route-table/rtb-02846defd3f4b13e7",
            "id": "rtb-02846defd3f4b13e7",
            "owner_id": "323741042377",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e5285f779ed75328",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "company": "ziyotek_2023_spring"
            },
            "tags_all": {
              "company": "ziyotek_2023_spring"
            },
            "timeouts": null,
            "vpc_id": "vpc-002bd492c74796622"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ziyo_igw",
            "aws_vpc.ziyo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ziyo_route_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c14bb9d5119d4656",
            "route_table_id": "rtb-02846defd3f4b13e7",
            "subnet_id": "subnet-0839b305f675e1221"
          },
          "dependencies": [
            "aws_internet_gateway.ziyo_igw",
            "aws_route_table.ziyo_route_table",
            "aws_subnet.public_subnet_1",
            "aws_vpc.ziyo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323741042377:security-group/sg-048263631cc704952",
            "description": "Allow ALL inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-048263631cc704952",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_all",
            "name_prefix": "",
            "owner_id": "323741042377",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-002bd492c74796622"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ziyo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ziyo_allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323741042377:security-group/sg-08f9b2583fe472a0f",
            "description": "Allow HTTPS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08f9b2583fe472a0f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow_https",
            "name_prefix": "",
            "owner_id": "323741042377",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-002bd492c74796622"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ziyo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323741042377:subnet/subnet-0daf33c48c49db5bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.10.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0daf33c48c49db5bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "323741042377",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "company": "ziyotek_2023_spring"
            },
            "tags_all": {
              "company": "ziyotek_2023_spring"
            },
            "vpc_id": "vpc-002bd492c74796622"
          },
          "dependencies": [
            "aws_vpc.ziyo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323741042377:subnet/subnet-0bb364079014418f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bb364079014418f7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "323741042377",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "company": "ziyotek_2023_spring"
            },
            "tags_all": {
              "company": "ziyotek_2023_spring"
            },
            "vpc_id": "vpc-002bd492c74796622"
          },
          "dependencies": [
            "aws_vpc.ziyo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323741042377:subnet/subnet-0839b305f675e1221",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0839b305f675e1221",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "323741042377",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "company": "ziyotek_2023_spring"
            },
            "tags_all": {
              "company": "ziyotek_2023_spring"
            },
            "vpc_id": "vpc-002bd492c74796622"
          },
          "dependencies": [
            "aws_vpc.ziyo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323741042377:subnet/subnet-0abe758b94519d002",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0abe758b94519d002",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "323741042377",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "company": "ziyotek_2023_spring"
            },
            "tags_all": {
              "company": "ziyotek_2023_spring"
            },
            "vpc_id": "vpc-002bd492c74796622"
          },
          "dependencies": [
            "aws_vpc.ziyo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ziyo_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323741042377:vpc/vpc-002bd492c74796622",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0a51ae873e673616b",
            "default_route_table_id": "rtb-0664988183867d23c",
            "default_security_group_id": "sg-029f100897d838d14",
            "dhcp_options_id": "dopt-0010276e6bba6ec5d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-002bd492c74796622",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0664988183867d23c",
            "owner_id": "323741042377",
            "tags": {
              "company": "ziyotek_2023_spring"
            },
            "tags_all": {
              "company": "ziyotek_2023_spring"
            }
          }
        }
      ]
    }
  ]
}